sumo/tests/dfrouter/errors/options_parsing/quad_minus2/errors.dfrouter
Error: On processing option '----net-file=net.net.xml':
 No option with the name '--net-file' exists.
